--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,8 +16,8 @@
         <button class="bet"id="black" data-color='black'>Black</button>
         <button class="bet"id="red" data-color='red'>Red</button>
         <button class="bet"id="green" data-color='green'>Green</button>
-        <p id="outcome"></p>
-        <p id="bank">$1000</p>
+        <p id="outcome"></p> 
+        <p id="bank"></p>
 
         
     
